2004-09-02  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b150

	* "Fix": Made "points" translateable in poll_properties

2004-09-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b149

	* Change: Don't require .htaccess file creation in config wizard
	  but notify the user that features will be disabled, and disable
	  rewrite support.  This is to allow installation on servers where
	  dot-files are not allowed to be written at all.

2004-09-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b148

	* Fix: Add mod_php5 section to setup/.htaccess

2004-09-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b147

	* Fix: addslashes() to DIRECTORY_SEPARATOR prior to adding it to
	  the mambo database.

2004-09-01 JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b146

	* Change: css changes to finish up new skin mods
	
	* New: madmod1 skins that takes advantage of the skin mods

2004-08-31  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b145

	* Fix: two more popup css changes that got left out before

2004-08-31  JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b144

	* New: Added class vapoll to voting output (allows more control over the text)

	* Fix: Calculate minimum width for $divCellWidth if voting "rank" is selected

2004-08-31  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b143

	* Change: remove array_search substituin from util.php as we require the use of PHP >= 4.1.0

	* Fix: remove Warning in tools/despam-comments.php

	* Change: Layout adjustment in tools/despam-comments.php

	* Fix: Made 'description' translateable.
	  (Note we need a better way translate fieldnames in editField()

2004-08-30  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b142

	* Change: Content of popup for uploading photos is not hardcode centered.

	* Change: No Alttext "No Caption", when Picture has no caption. RFE #962176.

	* Change: HTML Output beautify for add_photos form.

	* Change: Update Jenskin.

2004-08-29  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b141
