@@ -1,3 +1,7 @@
+2004-09-03  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b151
+
+	* Change: Add class='admin' to the admin urls embedded in albums.php
+
 2004-09-02  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b150
 
 	* "Fix": Made "points" translateable in poll_properties
